# docs

./: .gitignore  README.md  compose.yml
data/: cinema_leuzinger.json  uri_poi.xlsx  uri_veranstaltungskalender.json
docs/: Erreicht.pptx
load/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
load/src/: main.py  registry.py
load/src/loaders/: __init__.py  cinemaleuzinger.py
load/tests/: test_cinemaleuzinger.py
mcp-py/: Dockerfile  pyproject.toml
mcp-py/src/: test_abfragen.py
mcp-py/src/testmcp/: main.py
mcp-py/src/testmcp/events/: model.py  tool.py
mcp-py/src/testmcp/kino/: model.py  tool.py
